--- a/Views/Livro/Listagem.cshtml
+++ b/Views/Livro/Listagem.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Listagem de Livros";
 }
+
 <div class="row">
     <div class="col-md-12">
     <form class="form-inline" method="POST">
@@ -22,14 +23,23 @@
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped"> 
-            <thead>
-                <tr><th>Id</th>
-                <th>Titulo</th>
-                <th>Autor</th>
-                <th>Ano</th>
-                <th></th>
-                </tr>
-            </thead>
+            @if(Model.Count > 0)
+            {
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Título</th>
+                        <th>Autor</th>
+                        <th>Ano</th>
+                        <th></th>
+                    </tr>
+                </thead>
+            }
+            else
+            {
+                <br><br>
+                <h4 class="text-center">Ops! Nenhum resultado encontrado.</h4>
+            }
             <tbody>
                 @foreach(Livro l in Model)
                 {
